--- a/hui.html
+++ b/hui.html
@@ -19,7 +19,7 @@
         padding:0;}
     </style>
     <script src="https://js.arcgis.com/3.23/"></script>
-	<script src="https://hqh1998.github.io/fivework/jquery-1.8.3.js"></script>
+	<script src="http://code.jquery.com/jquery-1.8.3.js"></script>
     <script>
       var map;
       require(["esri/map",   
